# altair_rpg

./: CMakeLists.txt  README.md  main.cpp
data/: istockphoto-950628924-2048x2048.xcf
include/: assetManager.hpp  background.hpp  car.hpp  effectManager.hpp  game.hpp  object.hpp  windowManager.hpp
src/: antagonist.cpp  antagonist.hpp  assetManager.cpp  assetManager.hpp  background.cpp  background.hpp  car.cpp  car.hpp  constants.hpp  effect.cpp  effect.hpp  effectManager.cpp  effectManager.hpp  game.cpp  game.hpp  main.cpp  object.hpp  player.cpp  player.hpp  scale.cpp  scale.hpp  windowManager.cpp  ТУ_ДУ.txt
trash/: assetManager.cpp  assetManager.hpp
